--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.iot.helloworld">
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
@@ -21,7 +22,9 @@
         <activity android:name=".SubActivity" />
         <activity android:name=".ThirdActivity" />
         <activity android:name=".ListViewActivity" />
-        <activity android:name=".ScrollViewActivity"></activity>
+        <activity android:name=".ScrollViewActivity" />
+        <activity android:name=".NaverOpenAPIActivity" />
+        <activity android:name=".DaumOpenAPIActivity"></activity>
     </application>
 
 </manifest>
