센서 목록 조회 추가

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,11 +35,7 @@
             android:value="@integer/google_play_services_version" />
 
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity android:name=".SubActivity" />
         <activity android:name=".ThirdActivity" />
@@ -48,7 +44,14 @@
         <activity android:name=".NaverOpenAPIActivity" />
         <activity android:name=".DaumOpenAPIActivity" />
         <activity android:name=".GoogleMapActivity" />
-        <activity android:name=".SQLiteDatabaseActivity"></activity>
+        <activity android:name=".SQLiteDatabaseActivity" />
+        <activity android:name=".SensorActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
