--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".SubActivity" />
         <activity android:name=".ThirdActivity" />
         <activity android:name=".ListViewActivity" />
@@ -44,13 +44,16 @@
         <activity android:name=".GoogleMapActivity" />
         <activity android:name=".SQLiteDatabaseActivity" />
         <activity android:name=".SensorActivity">
+
+        </activity>
+        <activity android:name=".SensorMonitorActivity" />
+        <activity android:name=".ArduinoActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SensorMonitorActivity"></activity>
     </application>
 
 </manifest>
